Fix white space displayed on the side

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ section {
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  padding: 20px;
+  padding: 20px 0;
   background-color: #252831;
   text-align: center;
 }
